CellIterator: add "lastContributionTimestamp" to OSMEntitySnapshot & decouple from Grid implementation (#495)