@@ -3,14 +3,13 @@ package org.heigit.ohsome.oshdb.util.celliterator;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.heigit.ohsome.oshdb.OSHDBBoundingBox;
-import org.heigit.ohsome.oshdb.grid.GridOSHEntity;
 import org.heigit.ohsome.oshdb.grid.GridOSHRelations;
 import org.heigit.ohsome.oshdb.util.celliterator.CellIterator.IterateAllEntry;
 import org.heigit.ohsome.oshdb.util.celliterator.helpers.GridOSHFactory;
@@ -26,7 +25,7 @@ import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.Polygon;
 
 /**
- * Tests the {@link CellIterator#iterateByContribution(GridOSHEntity)} method on relations except
+ * Tests the {@link CellIterator#iterateByContribution(OSHEntitySource)} method on relations except
  * multipolygon relations.
  */
 class IterateByContributionTypeNotMultipolygonTest {
@@ -59,28 +58,28 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
-    assertEquals(300, result.get(0).changeset);
-    Geometry geom = result.get(0).geometry.get();
+    assertEquals(300, result.get(0).changeset());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof GeometryCollection);
-    Geometry geom4 = result.get(2).geometry.get();
+    Geometry geom4 = result.get(2).geometry().get();
     assertTrue(geom4 instanceof GeometryCollection);
   }
 
@@ -99,25 +98,26 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.DELETION),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
-    assertEquals(303, result.get(0).changeset);
+    assertEquals(303, result.get(0).changeset());
   }
 
+  @SuppressWarnings("ResultOfMethodCallIgnored")
   @Test
   void testWaysNotExistent() {
     // relation with two ways, both missing
@@ -133,8 +133,8 @@ class IterateByContributionTypeNotMultipolygonTest {
           osmEntity -> true,
           false
       )).iterateByContribution(
-          oshdbDataGridCell
-      ).collect(Collectors.toList());
+          OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+      ).toList();
     });
   }
 
@@ -152,23 +152,23 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.TAG_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.TAG_CHANGE),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
-    assertEquals(307, result.get(0).changeset);
+    assertEquals(307, result.get(0).changeset());
   }
 
   @Test
@@ -186,29 +186,29 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(8, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
 
-    assertEquals(310, result.get(0).changeset);
+    assertEquals(310, result.get(0).changeset());
 
-    assertEquals(null, result.get(0).previousGeometry.get());
-    Geometry geom = result.get(0).geometry.get();
+    assertNull(result.get(0).previousGeometry().get());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof GeometryCollection);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
-    assertEquals(result.get(2).geometry.get(), result.get(2).previousGeometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
+    assertEquals(result.get(2).geometry().get(), result.get(2).previousGeometry().get());
   }
 
   @Test
@@ -226,29 +226,29 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
 
-    assertEquals(312, result.get(0).changeset);
+    assertEquals(312, result.get(0).changeset());
 
-    assertEquals(null, result.get(0).previousGeometry.get());
-    Geometry geom = result.get(0).geometry.get();
+    assertNull(result.get(0).previousGeometry().get());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof GeometryCollection);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
-    assertNotEquals(result.get(2).geometry.get(), result.get(2).previousGeometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
+    assertNotEquals(result.get(2).geometry().get(), result.get(2).previousGeometry().get());
   }
 
   @Test
@@ -266,29 +266,29 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
 
-    assertEquals(313, result.get(0).changeset);
+    assertEquals(313, result.get(0).changeset());
 
-    assertEquals(null, result.get(0).previousGeometry.get());
-    Geometry geom = result.get(0).geometry.get();
+    assertNull(result.get(0).previousGeometry().get());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof GeometryCollection);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
-    assertNotEquals(result.get(2).geometry.get(), result.get(2).previousGeometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
+    assertNotEquals(result.get(2).geometry().get(), result.get(2).previousGeometry().get());
   }
 
   @Test
@@ -305,25 +305,26 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
 
-    assertEquals(314, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
-    Geometry geom = result.get(0).geometry.get();
+    assertEquals(314, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom1 = result.get(1).geometry.get();
+    Geometry geom1 = result.get(1).geometry().get();
     assertTrue(geom1 instanceof GeometryCollection);
-    Geometry geom2 = result.get(2).geometry.get();
+    Geometry geom2 = result.get(2).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
   }
 
+  @SuppressWarnings("ResultOfMethodCallIgnored")
   @Test
   void testNodesOfWaysNotExistent() {
     // relation 2 way members nodes do not exist
@@ -339,8 +340,8 @@ class IterateByContributionTypeNotMultipolygonTest {
           osmEntity -> true,
           false
       )).iterateByContribution(
-          oshdbDataGridCell
-      ).collect(Collectors.toList());
+          OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+      ).toList();
     });
   }
 
@@ -358,47 +359,47 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(5, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(3).activities.get()
+        result.get(3).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(4).activities.get()
+        result.get(4).activities().get()
     );
 
-    assertEquals(316, result.get(0).changeset);
+    assertEquals(316, result.get(0).changeset());
 
-    assertEquals(null, result.get(0).previousGeometry.get());
-    Geometry geom = result.get(0).geometry.get();
+    assertNull(result.get(0).previousGeometry().get());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom2 = result.get(1).geometry.get();
+    Geometry geom2 = result.get(1).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    Geometry geom3 = result.get(2).geometry.get();
+    Geometry geom3 = result.get(2).geometry().get();
     assertTrue(geom3 instanceof GeometryCollection);
-    Geometry geom4 = result.get(3).geometry.get();
+    Geometry geom4 = result.get(3).geometry().get();
     assertTrue(geom4 instanceof GeometryCollection);
-    Geometry geom5 = result.get(4).geometry.get();
+    Geometry geom5 = result.get(4).geometry().get();
     assertTrue(geom5 instanceof GeometryCollection);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
-    assertNotEquals(result.get(2).geometry.get(), result.get(2).previousGeometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
+    assertNotEquals(result.get(2).geometry().get(), result.get(2).previousGeometry().get());
   }
 
   @Test
@@ -415,17 +416,17 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(4, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
 
-    assertEquals(317, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
+    assertEquals(317, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
   }
 
   @Test
@@ -442,17 +443,17 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
 
-    assertEquals(318, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
+    assertEquals(318, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
   }
 
   @Test
@@ -470,24 +471,24 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(2, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom2 = result.get(1).geometry.get();
+    Geometry geom2 = result.get(1).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    assertEquals(319, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
+    assertEquals(319, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
   }
 
   @Test
@@ -504,20 +505,20 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom2 = result.get(2).geometry.get();
+    Geometry geom2 = result.get(2).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    assertEquals(320, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
+    assertEquals(320, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
   }
 
   @Test
@@ -534,25 +535,25 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(2, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom2 = result.get(1).geometry.get();
+    Geometry geom2 = result.get(1).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    assertEquals(321, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
+    assertEquals(321, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
   }
 
   @Test
@@ -569,30 +570,30 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(3, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(1).activities.get()
+        result.get(1).activities().get()
     );
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom1 = result.get(1).geometry.get();
+    Geometry geom1 = result.get(1).geometry().get();
     assertTrue(geom1 instanceof GeometryCollection);
-    Geometry geom2 = result.get(2).geometry.get();
+    Geometry geom2 = result.get(2).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    assertEquals(323, result.get(0).changeset);
-    assertEquals(null, result.get(0).previousGeometry.get());
-    assertNotEquals(result.get(1).geometry.get(), result.get(1).previousGeometry.get());
+    assertEquals(323, result.get(0).changeset());
+    assertNull(result.get(0).previousGeometry().get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(1).previousGeometry().get());
   }
 
 
@@ -619,8 +620,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(3, result.size());
   }
 
@@ -647,8 +648,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(3, result.size());
   }
 
@@ -675,8 +676,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -696,19 +697,19 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
-    assertTrue(result.get(1).activities.get().isEmpty());
+    assertTrue(result.get(1).activities().get().isEmpty());
     assertEquals(
         EnumSet.of(ContributionType.GEOMETRY_CHANGE),
-        result.get(2).activities.get()
+        result.get(2).activities().get()
     );
-    assertEquals(7, result.get(1).geometry.get().getNumPoints());
+    assertEquals(7, result.get(1).geometry().get().getNumPoints());
   }
 
   @Test
@@ -734,8 +735,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -753,8 +754,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -774,8 +775,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -802,9 +803,9 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
-    Geometry geom1 = result.get(0).geometry.get();
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
+    Geometry geom1 = result.get(0).geometry().get();
     assertTrue(geom1 instanceof GeometryCollection);
     assertEquals(1, result.size());
   }
@@ -824,13 +825,13 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(4, result.size());
     assertEquals(
         EnumSet.of(ContributionType.CREATION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
   }
 
@@ -849,8 +850,8 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -877,12 +878,12 @@ class IterateByContributionTypeNotMultipolygonTest {
         osmEntity -> true,
         false
     )).iterateByContribution(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(1, result.size());
     assertEquals(
         EnumSet.of(ContributionType.DELETION),
-        result.get(0).activities.get()
+        result.get(0).activities().get()
     );
   }
 }
