@@ -9,7 +9,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.heigit.ohsome.oshdb.OSHDBBoundingBox;
-import org.heigit.ohsome.oshdb.grid.GridOSHEntity;
 import org.heigit.ohsome.oshdb.grid.GridOSHRelations;
 import org.heigit.ohsome.oshdb.util.celliterator.CellIterator.IterateByTimestampEntry;
 import org.heigit.ohsome.oshdb.util.celliterator.helpers.GridOSHFactory;
@@ -26,7 +25,7 @@ import org.locationtech.jts.geom.MultiPolygon;
 import org.locationtech.jts.geom.Polygon;
 
 /**
- * Tests the {@link CellIterator#iterateByTimestamps(GridOSHEntity)} method on OSM relations.
+ * Tests the {@link CellIterator#iterateByTimestamps(OSHEntitySource)} method on OSM relations.
  */
 class IterateByTimestampsRelationsTest {
   private final GridOSHRelations oshdbDataGridCell;
@@ -59,17 +58,17 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(12, result.size());
 
-    assertEquals(300, result.get(0).osmEntity.getChangesetId());
-    Geometry geom = result.get(0).geometry.get();
+    assertEquals(300, result.get(0).osmEntity().getChangesetId());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof MultiPolygon);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof MultiPolygon);
-    Geometry geom4 = result.get(2).geometry.get();
+    Geometry geom4 = result.get(2).geometry().get();
     assertTrue(geom4 instanceof MultiPolygon);
   }
 
@@ -89,11 +88,11 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(9, result.size());
-    assertEquals(303, result.get(0).osmEntity.getChangesetId());
+    assertEquals(303, result.get(0).osmEntity().getChangesetId());
   }
 
   @SuppressWarnings("ResultOfMethodCallIgnored")
@@ -113,7 +112,7 @@ class IterateByTimestampsRelationsTest {
           osmEntity -> true,
           false
       )).iterateByTimestamps(
-          oshdbDataGridCell
+          OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
       ).collect(Collectors.toList());
     });
   }
@@ -133,11 +132,11 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(14, result.size());
-    assertEquals(307, result.get(0).osmEntity.getChangesetId());
+    assertEquals(307, result.get(0).osmEntity().getChangesetId());
   }
 
   @Test
@@ -156,20 +155,20 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    assertEquals(310, result.get(0).osmEntity.getChangesetId());
+    assertEquals(310, result.get(0).osmEntity().getChangesetId());
 
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof Polygon);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(0).geometry.get());
-    assertNotEquals(result.get(2).geometry.get(), result.get(1).geometry.get());
-    assertEquals(result.get(3).geometry.get(), result.get(2).geometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(0).geometry().get());
+    assertNotEquals(result.get(2).geometry().get(), result.get(1).geometry().get());
+    assertEquals(result.get(3).geometry().get(), result.get(2).geometry().get());
   }
 
   @Test
@@ -188,19 +187,19 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    assertEquals(312, result.get(0).osmEntity.getChangesetId());
+    assertEquals(312, result.get(0).osmEntity().getChangesetId());
 
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom3 = result.get(1).geometry.get();
+    Geometry geom3 = result.get(1).geometry().get();
     assertTrue(geom3 instanceof Polygon);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(0).geometry.get());
-    assertNotEquals(result.get(6).geometry.get(), result.get(1).geometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(0).geometry().get());
+    assertNotEquals(result.get(6).geometry().get(), result.get(1).geometry().get());
   }
 
   @Test
@@ -219,14 +218,14 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    assertEquals(313, result.get(0).osmEntity.getChangesetId());
+    assertEquals(313, result.get(0).osmEntity().getChangesetId());
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(0).geometry.get());
-    assertEquals(result.get(6).geometry.get(), result.get(5).geometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(0).geometry().get());
+    assertEquals(result.get(6).geometry().get(), result.get(5).geometry().get());
   }
 
   @Test
@@ -244,15 +243,15 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
 
-    assertEquals(314, result.get(0).osmEntity.getChangesetId());
-    Geometry geom = result.get(0).geometry.get();
+    assertEquals(314, result.get(0).osmEntity().getChangesetId());
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof GeometryCollection);
-    Geometry geom2 = result.get(9).geometry.get();
+    Geometry geom2 = result.get(9).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
   }
 
@@ -273,7 +272,7 @@ class IterateByTimestampsRelationsTest {
           osmEntity -> true,
           false
       )).iterateByTimestamps(
-          oshdbDataGridCell
+          OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
       ).collect(Collectors.toList());
     });
   }
@@ -293,25 +292,25 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    assertEquals(316, result.get(0).osmEntity.getChangesetId());
+    assertEquals(316, result.get(0).osmEntity().getChangesetId());
 
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom2 = result.get(1).geometry.get();
+    Geometry geom2 = result.get(1).geometry().get();
     assertTrue(geom2 instanceof Polygon);
-    Geometry geom3 = result.get(2).geometry.get();
+    Geometry geom3 = result.get(2).geometry().get();
     assertTrue(geom3 instanceof Polygon);
-    Geometry geom4 = result.get(3).geometry.get();
+    Geometry geom4 = result.get(3).geometry().get();
     assertTrue(geom4 instanceof Polygon);
-    Geometry geom5 = result.get(9).geometry.get();
+    Geometry geom5 = result.get(9).geometry().get();
     assertTrue(geom5 instanceof Polygon);
 
-    assertNotEquals(result.get(1).geometry.get(), result.get(0).geometry.get());
-    assertEquals(result.get(2).geometry.get(), result.get(1).geometry.get());
+    assertNotEquals(result.get(1).geometry().get(), result.get(0).geometry().get());
+    assertEquals(result.get(2).geometry().get(), result.get(1).geometry().get());
   }
 
   @Test
@@ -329,11 +328,11 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(13, result.size());
-    assertEquals(317, result.get(0).osmEntity.getChangesetId());
+    assertEquals(317, result.get(0).osmEntity().getChangesetId());
   }
 
   @Test
@@ -351,13 +350,13 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    assertEquals(318, result.get(0).osmEntity.getChangesetId());
+    assertEquals(318, result.get(0).osmEntity().getChangesetId());
 
-    assertTrue(result.get(6).geometry.get().isEmpty());
+    assertTrue(result.get(6).geometry().get().isEmpty());
   }
 
   @Test
@@ -376,15 +375,15 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(10, result.size());
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom2 = result.get(7).geometry.get();
+    Geometry geom2 = result.get(7).geometry().get();
     assertTrue(geom2 instanceof GeometryCollection);
-    assertEquals(319, result.get(0).osmEntity.getChangesetId());
+    assertEquals(319, result.get(0).osmEntity().getChangesetId());
   }
 
   @Test
@@ -402,15 +401,15 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(12, result.size());
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom2 = result.get(2).geometry.get();
+    Geometry geom2 = result.get(2).geometry().get();
     assertTrue(geom2 instanceof Polygon);
-    assertEquals(320, result.get(0).osmEntity.getChangesetId());
+    assertEquals(320, result.get(0).osmEntity().getChangesetId());
   }
 
   @Test
@@ -428,16 +427,16 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(12, result.size());
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof MultiPolygon);
-    Geometry geom2 = result.get(9).geometry.get();
+    Geometry geom2 = result.get(9).geometry().get();
     assertTrue(geom2 instanceof Polygon);
-    assertEquals(321, result.get(0).osmEntity.getChangesetId());
-    assertNotEquals(result.get(9).geometry.get(), result.get(0).geometry.get());
+    assertEquals(321, result.get(0).osmEntity().getChangesetId());
+    assertNotEquals(result.get(9).geometry().get(), result.get(0).geometry().get());
   }
 
   @Test
@@ -455,18 +454,18 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(12, result.size());
 
-    Geometry geom = result.get(0).geometry.get();
+    Geometry geom = result.get(0).geometry().get();
     assertTrue(geom instanceof Polygon);
-    Geometry geom1 = result.get(1).geometry.get();
+    Geometry geom1 = result.get(1).geometry().get();
     assertTrue(geom1 instanceof GeometryCollection);
-    Geometry geom2 = result.get(9).geometry.get();
+    Geometry geom2 = result.get(9).geometry().get();
     assertTrue(geom2 instanceof Polygon);
-    assertEquals(323, result.get(0).osmEntity.getChangesetId());
-    assertNotEquals(result.get(9).geometry.get(), result.get(0).geometry.get());
+    assertEquals(323, result.get(0).osmEntity().getChangesetId());
+    assertNotEquals(result.get(9).geometry().get(), result.get(0).geometry().get());
   }
 
   @Test
@@ -494,8 +493,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(10, result.size());
   }
 
@@ -523,8 +522,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(0, result.size());
   }
 
@@ -553,8 +552,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(10, result.size());
   }
 
@@ -583,8 +582,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(resultPoly.isEmpty());
   }
 
@@ -605,10 +604,10 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
-    assertNotEquals(result.get(3).geometry.get(), result.get(0).geometry.get());
+    assertNotEquals(result.get(3).geometry().get(), result.get(0).geometry().get());
   }
 
   @Test
@@ -635,8 +634,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
   }
@@ -656,8 +655,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(3, result.size());
   }
 
@@ -676,8 +675,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(resultPoly.isEmpty());
   }
 
@@ -699,17 +698,17 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     // geom of requested area vs full geom after modification
-    assertNotEquals(result.get(0).geometry.get().getArea(),
-        result.get(0).unclippedGeometry.get().getArea());
+    assertNotEquals(result.get(0).geometry().get().getArea(),
+        result.get(0).unclippedGeometry().get().getArea());
     // full geom changed
-    assertNotEquals(result.get(2).unclippedGeometry.get().getArea(),
-        result.get(0).unclippedGeometry.get().getArea());
-    assertNotEquals(result.get(2).unclippedGeometry.get().getArea(),
-        result.get(4).unclippedGeometry.get().getArea());
+    assertNotEquals(result.get(2).unclippedGeometry().get().getArea(),
+        result.get(0).unclippedGeometry().get().getArea());
+    assertNotEquals(result.get(2).unclippedGeometry().get().getArea(),
+        result.get(4).unclippedGeometry().get().getArea());
   }
 
   @Test
@@ -738,8 +737,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertTrue(result.isEmpty());
   }
 
@@ -759,8 +758,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
   }
@@ -780,8 +779,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(5, result.size());
   }
@@ -801,8 +800,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
     assertEquals(0, result.size());
   }
 
@@ -831,8 +830,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
   }
@@ -861,8 +860,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(5, result.size());
   }
@@ -891,8 +890,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(0, result.size());
   }
@@ -921,8 +920,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> !(osmEntity.getVersion() == 2),
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(3, result.size());
   }
@@ -951,8 +950,8 @@ class IterateByTimestampsRelationsTest {
         osmEntity -> true,
         false
     )).iterateByTimestamps(
-        oshdbDataGridCell
-    ).collect(Collectors.toList());
+        OSHEntitySource.fromGridOSHEntity(oshdbDataGridCell)
+    ).toList();
 
     assertEquals(12, result.size());
   }
